<resources>
    <string name="app_name">Qur\'An</string>
    <string name="sourates">Sourates</string>
    <string name="reprendre_la_lecture">Reprendre la lecture</string>
    <string name="todo">photo pour le bouton</string>
    <string name="sourates_tvw">Sourates</string>
    <string name="ajiza_tvw">Ajiza</string>
    <string name="ajiza">Ajiza</string>
    <string name="version">version 0.1</string>
    <string name="parametres">Paramètres</string>
    <string name="traduction">Version française</string>
</resources>